--- a/kontakt.html
+++ b/kontakt.html
@@ -12,12 +12,12 @@
     <h1 class="text-4xl md:text-5xl font-extrabold text-white">Skontaktuj się z nami</h1>
 
     <div class="flex justify-center items-center gap-10 md:gap-16">
-      <a href="https://www.facebook.com/twojprofil" target="_blank" class="hover:scale-110 transition duration-300">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="w-12 h-12 invert" />
+      <a href="https://www.facebook.com/wiktor.bugno.754/" target="_blank" class="hover:scale-110 transition duration-300">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="w-12 h-12" style="fill:#000000;" />
         <p class="mt-2 text-sm text-white/90">Facebook</p>
       </a>
-      <a href="https://www.instagram.com/twojprofil" target="_blank" class="hover:scale-110 transition duration-300">
-        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="w-12 h-12 invert" />
+      <a href="https://www.instagram.com/wictureq" target="_blank" class="hover:scale-110 transition duration-300">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="w-12 h-12" style="fill:#000000;" />
         <p class="mt-2 text-sm text-white/90">Instagram</p>
       </a>
     </div>
