--- a/index.html
+++ b/index.html
@@ -5,25 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nowoczesna Strona</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      /* Subtelny efekt połyskującego tekstu */
+      .glow {
+        color: white;
+        text-shadow: 0 0 3px #ffffff, 0 0 6px #6a5bfa, 0 0 12px #6a5bfa;
+        transition: text-shadow 0.3s ease-in-out;
+      }
+
+      .glow:hover {
+        text-shadow: 0 0 10px #ffffff, 0 0 20px #6a5bfa, 0 0 30px #6a5bfa;
+      }
+
+      /* Subtelny efekt glow na przyciskach */
+      .button-glow {
+        background: linear-gradient(45deg, #6a5bfa, #8c6ae2);
+        border-radius: 12px;
+        padding: 12px 24px;
+        font-weight: bold;
+        color: white;
+        text-shadow: 0 0 5px #fff;
+        box-shadow: 0 0 5px #6a5bfa, 0 0 10px #6a5bfa;
+        transition: all 0.3s ease;
+      }
+
+      .button-glow:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 15px #8c6ae2, 0 0 20px #6a5bfa;
+      }
+
+      /* Zmienione podkreślenie linków */
+      .text-blue-400:hover {
+        text-decoration: underline;
+        text-decoration-color: #a3bffa;
+      }
+    </style>
   </head>
   <body class="bg-gray-950 text-white font-sans">
 
     <!-- Hero -->
-    <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 bg-gradient-to-br from-blue-700 via-purple-700 to-pink-600">
-      <h1 class="text-4xl md:text-6xl font-bold mb-6 drop-shadow-lg">
+    <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 bg-gradient-to-br from-blue-700 via-purple-600 to-pink-500">
+      <h1 class="text-4xl md:text-6xl font-bold mb-6 drop-shadow-lg glow">
         Witamy na naszej stronie
       </h1>
       <p class="text-lg md:text-xl mb-8 max-w-xl text-white/90">
         Nowoczesny design. Szybkość. Niesamowite wrażenia.
       </p>
-      <a href="#oferta" class="px-6 py-3 bg-white text-black font-semibold rounded-xl shadow-xl hover:bg-gray-100 transition">
+      <a href="#oferta" class="button-glow hover:bg-gray-100 transition" onmouseover="playHoverSound()" onclick="playClickSound()">
         Zobacz ofertę
       </a>
     </section>
 
     <!-- Oferta -->
     <section id="oferta" class="py-20 px-6 bg-gray-900">
-      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">
+      <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 glow">
         Nasze usługi
       </h2>
     
@@ -40,14 +75,9 @@
           <h3 class="text-xl font-bold mb-4">Kontakt</h3>
           <p class="text-white/80">Kliknij, aby zobaczyć dane kontaktowe.</p>
         </a>
-        </div>
       </div>
     </section>
 
     <!-- Stopka -->
     <footer class="bg-gray-950 text-center py-10 text-sm text-gray-400">
-      © 2025 Nowoczesna Strona. Wszelkie prawa zastrzeżone.
-    </footer>
-    
-  </body>
-</html>
+      © 2025 Nowoczesna Strona. Wszelkie prawa zast
