--- a/kontakt.html
+++ b/kontakt.html
@@ -5,18 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kontakt</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Subtelny efekt połyskującego tekstu */
+    .glow {
+      color: white;
+      text-shadow: 0 0 3px #ffffff, 0 0 6px #6a5bfa, 0 0 12px #6a5bfa;
+      transition: text-shadow 0.3s ease-in-out;
+    }
+
+    .glow:hover {
+      text-shadow: 0 0 10px #ffffff, 0 0 20px #6a5bfa, 0 0 30px #6a5bfa;
+    }
+
+    /* Subtelny efekt glow na przyciskach */
+    .button-glow {
+      background: linear-gradient(45deg, #6a5bfa, #8c6ae2);
+      border-radius: 12px;
+      padding: 12px 24px;
+      font-weight: bold;
+      color: white;
+      text-shadow: 0 0 5px #fff;
+      box-shadow: 0 0 5px #6a5bfa, 0 0 10px #6a5bfa;
+      transition: all 0.3s ease;
+    }
+
+    .button-glow:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px #8c6ae2, 0 0 20px #6a5bfa;
+    }
+
+    /* Efekt powiększania ikon */
+    .icon:hover {
+      transform: scale(1.1);
+      transition: transform 0.3s ease;
+    }
+
+    /* Zmienione podkreślenie linków */
+    .text-blue-400:hover {
+      text-decoration: underline;
+      text-decoration-color: #a3bffa;
+    }
+
+    /* Tło sekcji z efektem tła gradientowego */
+    .section-background {
+      background: linear-gradient(135deg, rgba(54, 54, 70, 0.9), rgba(0, 0, 0, 0.6));
+    }
+  </style>
 </head>
 <body class="bg-gradient-to-br from-gray-800 via-gray-900 to-black text-white font-sans min-h-screen flex items-center justify-center px-6">
 
-  <div class="bg-gray-800/90 p-12 md:p-20 rounded-3xl shadow-2xl w-full max-w-4xl text-center space-y-10 border border-white/10">
-    <h1 class="text-4xl md:text-5xl font-extrabold text-white">Skontaktuj się z nami</h1>
+  <div class="bg-gray-800/90 p-12 md:p-20 rounded-3xl shadow-2xl w-full max-w-4xl text-center space-y-10 border border-white/10 section-background">
+    <h1 class="text-4xl md:text-5xl font-extrabold text-white glow">
+      Skontaktuj się z nami
+    </h1>
 
     <div class="flex justify-center items-center gap-10 md:gap-16">
-      <a href="https://www.facebook.com/wiktor.bugno.754/" target="_blank" class="hover:scale-110 transition duration-300">
+      <a href="https://www.facebook.com/wiktor.bugno.754/" target="_blank" class="hover:scale-110 transition duration-300 icon">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" class="w-12 h-12" style="fill:#000000;" />
         <p class="mt-2 text-sm text-white/90">Facebook</p>
       </a>
-      <a href="https://www.instagram.com/wictureq" target="_blank" class="hover:scale-110 transition duration-300">
+      <a href="https://www.instagram.com/wictureq" target="_blank" class="hover:scale-110 transition duration-300 icon">
         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="w-12 h-12" style="fill:#000000;" />
         <p class="mt-2 text-sm text-white/90">Instagram</p>
       </a>
