--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kontakt</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com?v=1.1"></script>
   <style>
     /* Subtelny efekt połyskującego tekstu */
     .glow {
