--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Nowoczesna Strona</title>
     <script src="https://cdn.tailwindcss.com?v=1.1"></script>
     <style>
-      /* Subtelny efekt połyskującego tekstu */
       .glow {
         color: white;
         text-shadow: 0 0 3px #ffffff, 0 0 6px #6a5bfa, 0 0 12px #6a5bfa;
@@ -17,7 +16,6 @@
         text-shadow: 0 0 10px #ffffff, 0 0 20px #6a5bfa, 0 0 30px #6a5bfa;
       }
 
-      /* Subtelny efekt glow na przyciskach */
       .button-glow {
         background: linear-gradient(45deg, #6a5bfa, #8c6ae2);
         border-radius: 12px;
@@ -34,7 +32,6 @@
         box-shadow: 0 0 15px #8c6ae2, 0 0 20px #6a5bfa;
       }
 
-      /* Zmienione podkreślenie linków */
       .text-blue-400:hover {
         text-decoration: underline;
         text-decoration-color: #a3bffa;
@@ -51,7 +48,7 @@
       <p class="text-lg md:text-xl mb-8 max-w-xl text-white/90">
         Nowoczesny design. Szybkość. Niesamowite wrażenia.
       </p>
-      <a href="#oferta" class="button-glow hover:bg-gray-100 transition" onmouseover="playHoverSound()" onclick="playClickSound()">
+      <a href="#oferta" class="button-glow hover:bg-gray-100 transition">
         Zobacz ofertę
       </a>
     </section>
@@ -61,16 +58,19 @@
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 glow">
         Nasze usługi
       </h2>
-    
+
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-        <div class="bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition transform hover:-translate-y-1 text-center">
+        <!-- Klikalna karta z reklamą -->
+        <div id="show-ad" class="cursor-pointer bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition transform hover:-translate-y-1 text-center">
           <h3 class="text-xl font-bold mb-4">Tworzenie stron internetowych</h3>
           <p class="text-white/80">Tworzymy responsywne i szybkie strony dopasowane do Twoich potrzeb.</p>
         </div>
+
         <div class="bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition transform hover:-translate-y-1 text-center">
           <h3 class="text-xl font-bold mb-4">Usługa 2</h3>
           <p class="text-white/80">Nowoczesne rozwiązania technologiczne.</p>
         </div>
+
         <a href="kontakt.html" class="bg-gray-800 p-6 rounded-2xl shadow-lg hover:shadow-2xl transition transform hover:-translate-y-1 text-center block">
           <h3 class="text-xl font-bold mb-4">Kontakt</h3>
           <p class="text-white/80">Kliknij, aby zobaczyć dane kontaktowe.</p>
@@ -78,6 +78,34 @@
       </div>
     </section>
 
+    <!-- Modal Reklamy -->
+    <div id="web-ad-modal" class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center z-50 hidden">
+      <div class="bg-white text-gray-900 p-8 rounded-2xl max-w-lg w-full shadow-2xl text-center relative">
+        <button onclick="closeAd()" class="absolute top-4 right-4 text-gray-500 hover:text-gray-800 text-xl">&times;</button>
+        <h2 class="text-2xl font-bold mb-4">Potrzebujesz strony internetowej?</h2>
+        <p class="mb-6">Oferujemy nowoczesne, szybkie i responsywne strony dopasowane do Twojego biznesu. Wybierz, co chcesz zrobić dalej!</p>
+        <a href="oferta-strony.html" class="button-glow inline-block">Dowiedz się więcej</a>
+      </div>
+    </div>
+
     <!-- Stopka -->
     <footer class="bg-gray-950 text-center py-10 text-sm text-gray-400">
-      © 2025 Nowoczesna Strona. Wszelkie prawa zast
+      © 2025 Nowoczesna Strona. Wszelkie prawa zastrzeżone.
+    </footer>
+
+    <!-- JavaScript -->
+    <script>
+      const adModal = document.getElementById("web-ad-modal");
+      const showAdBtn = document.getElementById("show-ad");
+
+      showAdBtn.addEventListener("click", () => {
+        adModal.classList.remove("hidden");
+      });
+
+      function closeAd() {
+        adModal.classList.add("hidden");
+      }
+    </script>
+
+  </body>
+</html>
